# cell_simulation

./: .gitignore  CMakeLists.txt  CMake_cheat_sheat.txt  README.md  gmon.out  main  main.c  performance_analysis.sh  plot_group.sh  read_me.txt  run.sh  run_2.sh  run_and_analyse.sh  run_cluster.sh  run_group.sh  run_movie.sh  submit_batch.sh
data_analysis/: data_analysis.py  track_animation.py
new_output/adhesion/: areaFraction_0.3_Pe_10  areaFraction_0.3_Pe_120  areaFraction_0.3_Pe_150  areaFraction_0.3_Pe_20  areaFraction_0.3_Pe_40  areaFraction_0.3_Pe_80  areaFraction_0.5_Pe_10  areaFraction_0.5_Pe_120  areaFraction_0.5_Pe_150  areaFraction_0.5_Pe_20  areaFraction_0.5_Pe_40  areaFraction_0.5_Pe_80  areaFraction_0.7_Pe_10  areaFraction_0.7_Pe_120  areaFraction_0.7_Pe_150  areaFraction_0.7_Pe_20  areaFraction_0.7_Pe_40  areaFraction_0.7_Pe_80  areaFraction_0.85_Pe_10  areaFraction_0.85_Pe_120  areaFraction_0.85_Pe_150  areaFraction_0.85_Pe_20  areaFraction_0.85_Pe_40  areaFraction_0.85_Pe_80  areaFraction_0.8_Pe_10  areaFraction_0.8_Pe_120  areaFraction_0.8_Pe_150  areaFraction_0.8_Pe_20  areaFraction_0.8_Pe_40  areaFraction_0.8_Pe_80
output/: 4particles.csv  4particles.mov  tracks.csv
output/HighDensity/: HighDensity
output/HighDensityControl/: HighDensityControl
output/HigherDensity/: HigherDensity
output/LowDensity/: LowDensity
output/test/: .test_parameters_tracks.csv.kate-swp  test_parameters  test_parameters.mov  test_parameters_no_minimisation.mov  test_parameters_old_wrap.mov  test_parameters_tracks.csv  test_parameters_tracks_old_interactions.csv
src/: CMakeLists.txt  agent_simulation_config  agent_simulation_config.h  base_types2D.h  cell_simulation.c  cell_simulation.h  global.h  main.c  testing  testing.c  xoshiro_rng.c  xoshiro_rng.h
test/: CMakeLists.txt  exampleSystem  exampleSystem_tracks.csv  unit_tests.cc
